--- a/components/comunicacionWiFi/CMakeLists.txt
+++ b/components/comunicacionWiFi/CMakeLists.txt
@@ -1,2 +1,6 @@
 idf_component_register(SRCS "comunicacionWiFi.c"
-                    INCLUDE_DIRS "include")
+                    INCLUDE_DIRS "include"
+                    REQUIRES "esp_wifi"
+                    REQUIRES nvs_flash
+                    )
+                    
