--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,6 @@ cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(proyectoBateadora)
+
+# Incluir el componente comunicacionWiFi
+set(EXTRA_COMPONENT_DIRS components/comunicacionWiFi)
