--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,6 @@
 idf_component_register(SRCS "main.c"
-                    INCLUDE_DIRS ".")
+                    INCLUDE_DIRS "."
+                    )
+set(COMPONENT_REQUIRES "json")
 list(APPEND EXTRA_COMPONENT_DIR components)
+
