modificaciones en el README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,6 @@ cmake_minimum_required(VERSION 3.16)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(proyectoBateadora)
 
-# Incluir el componente comunicacionWiFi
-set(EXTRA_COMPONENT_DIRS components/comunicacionWiFi)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "components/comunicacionWiFi/client.key" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "components/comunicacionWiFi/client.crt" TEXT)
+target_add_binary_data(${CMAKE_PROJECT_NAME}.elf "components/comunicacionWiFi/ca.crt" TEXT)
